--- a/theiz/templates/theiz/contact.html
+++ b/theiz/templates/theiz/contact.html
@@ -202,6 +202,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav text-white navbar-right">
         <li><a style="color:#fff;margin-top:-15px" href="/theiz/profile/">Profile</a></li>
+        <li><a style="color:#fff;margin-top:-15px" href="/theiz/blog/">Blog</a></li>
         <li><a style="color:#fff;margin-top:-15px" href="/theiz/team">Teams</a></li>
         <li><a style="color:#fff;margin-top:-15px" href="/theiz/contact">Contact</a></li>
       </ul>
@@ -246,3 +247,4 @@
 
 </body>
 </html>
+
