--- a/theiz/templates/theiz/team.html
+++ b/theiz/templates/theiz/team.html
@@ -67,6 +67,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav text-white navbar-right">
         <li><a style="color:#fff;margin-top:-15px" href="/theiz/profile/">Profile</a></li>
+        <li><a style="color:#fff;margin-top:-15px" href="/theiz/blog/">Blog</a></li>
         <li><a style="color:#fff;margin-top:-15px" href="/theiz/about">Teams</a></li>
         <li><a style="color:#fff;margin-top:-15px" href="/theiz/contact">Contact</a></li>
       </ul>
@@ -102,3 +103,4 @@
 
 </body>
 </html>
+
